network-policy/allow-website-private.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: website-ingress-policy
  namespace: website-private
spec:
  podSelector:
    matchLabels:
      app: website-private
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          visibility: private
    - ipBlock:
        cidr: 10.240.0.0/16
