network-policy/deny-website-private.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: website-deny-all
  namespace: website-private
spec:
  podSelector:
    matchLabels:
      app: website-private
  ingress: []
