network-policy/deny-website-public.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: website-deny-all
  namespace: website-public
spec:
  podSelector:
    matchLabels:
      app: website-public
  ingress: []
